# FamilyBot

./: .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .pylintrc  ATTRIB.md  CHANGELOG.md  COMMIT_MESSAGE.md  FamilyBot.py  HUMANIZED_PR_DRAFT.md  LICENSE  RELEASE_NOTES.md  ROADMAP.md  TASKS.md  WebSocketServer.py  commit_message.txt  config-template.yml  config.py  gamelist.txt  inspect_db.py  justfile  pyproject.toml  readme.md  reinstall_bot.ps1  requirements-hashes.txt  requirements.txt  run_bots.bat  run_bots.ps1  run_bots.sh
.github/workflows/: security.yml
Token_Sender/: config.yaml  getToken.py
doc/: DYNAMIC_ADMIN_COMMANDS_PLAN.md  IMPLEMENTATION_PLAN.md  MISE_INTEGRATION_PLAN.md  MYPY_REMEDIATION_PLAN.md  PR-overhaul-t1.md  PRECOMMIT_MIGRATION.md  PRICE_ENHANCEMENT_PLAN.md  PYLINT_REMEDIATION_PLAN.md  ROADMAP.md  SUPPLY_CHAIN_SECURITY.md  TOKEN_REFRESH_PLAN.md  TOKEN_SENDER_MIGRATION.md  VERSION_MANAGEMENT.md  WEB_UI_PLAN.md  WEB_UI_README.md  async_optimization_guide.md  force_plan.md
doc/PRD/: PRD.md  TASK-01.md  TASK-02.md  TASK-03.md  TASK-04.md  TASK-05.md  TASK-06.md  TASK-07.md  TASK-08.md  TASK-09.md  TASK-10.md  TASK-11.md  TASK-12.md  TASK-13.md  TASK-14.md  TASKS.md
lib/: familly_game_manager.py  family_utils.py  token_manager.py  utils.py
plugins/: common_game.py  free_epicgames.py  help_message.py  steam_family.py
scripts/: ASYNC_DATABASE_FIX_README.md  JSON_IMPORT_README.md  PRICE_OPTIMIZATION_README.md  README.md  backup_database.py  bump_major.py  bump_minor.py  bump_patch.py  bump_version.py  check_db_integrity.py  check_price_cache.py  check_updates.py  debug_database_structure.py  debug_deals.py  debug_deals_detailed.py  diagnose_token.py  example_import.json  example_steamworks_owned_games.json  fix_missing_info.py  force_token_update.py  json_database_importer.py  lint.py  populate_database.py  populate_prices.py  populate_prices_async.py  populate_prices_optimized.py  purge_all_cache.ps1  purge_all_cache.sh  purge_cache.ps1  purge_cache.sh  purge_family_library.ps1  purge_family_library.sh  purge_wishlist.ps1  purge_wishlist.sh  pylint_remediation.py  release.py  remove_trailing_whitespace.py  restore_database.py  setup_browser.py  setup_git_hooks.py  (+4 more)
src/familybot/: FamilyBot.py  WebSocketServer.py  config.py
src/familybot/Token_Sender/: config-template.yaml  getToken.py  requirements.txt
src/familybot/lib/: admin_commands.py  api_utils.py  backup_manager.py  cache_service.py  constants.py  database.py  deal_service.py  discord_user_repository.py  discord_utils.py  familly_game_manager.py  family_game_manager.py  family_library_repository.py  family_library_service.py  family_utils.py  game_details_repository.py  itad_price_repository.py  itad_service.py  logging_config.py  plugin_admin_actions.py  steam_api_manager.py  steam_helpers.py  steam_itad_mapping_repository.py  token_manager.py  types.py  user_games_repository.py  user_repository.py  utils.py  web_logging.py  wishlist_repository.py  wishlist_service.py
src/familybot/plugins/: EXAMPLE_PLUGIN_README.md  common_game.py  example_plugin.py.template  free_epicgames.py  free_games.py  help_message.py  maintenance.py  steam_admin.py  steam_family.py  steam_tasks.py  token_sender.py
src/familybot/web/: __init__.py  api.py  dependencies.py  models.py  state.py
src/familybot/web/routes/: __init__.py  routes__init__.py  routes_admin.py  routes_cache.py  routes_common_games.py  routes_config.py  routes_games.py  routes_logs.py  routes_pages.py  routes_status.py  routes_wishlist.py
src/familybot/web/static/css/: style.css
src/familybot/web/static/js/: admin.js  app.js  bot_status.js  theme_switcher.js
src/familybot/web/templates/: admin.html  common_games.html  config.html  dashboard.html  logs.html  navbar.html  wishlist.html
