# FamilyBot/pyproject.toml

[project]
name = "familybot"
version = "1.16.0"
description = "Family Bot is a discord bot mainly made to get the new games that are added to the Steam Family library."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ # Use ~= for safe upgrades, == for pinned versions
    "discord-py-interactions~=5.15.0",
    "aiohttp~=3.9.5",
    "requests~=2.32.4",
    "websockets~=12.0",
    "PyYAML~=6.0.2",
    "tqdm~=4.66.5",
    "httpx~=0.28.1",
    "playwright~=1.53.0",
    "fastapi~=0.122.1",
    "uvicorn~=0.32.1",
    "jinja2~=3.1.6",
    "python-multipart~=0.0.18",
    "pydantic~=2.10.3",
    "coloredlogs~=15.0.1",
    "python-json-logger~=2.0.7",
    "steam~=1.4.4",
    "pre-commit~=4.0.1",
    "pylint~=3.3.1",
    "audioop-lts~=0.2.1",
]

[project.scripts]
familybot = "familybot.FamilyBot:main"
familybot-setup = "scripts.setup_browser:main"
familybot-test = "scripts.test_token_plugin:main"
familybot-force-token = "scripts.force_token_update:main"
familybot-populate = "scripts.populate_database:main"
familybot-inspect-db = "inspect_db:inspect_database"
familybot-setup-precommit = "scripts.setup_precommit:main"
familybot-lint = "scripts.lint:main"

[tool.setuptools]
# This tells setuptools to look for your package(s) inside the 'src' directory.
# Since your main package is now 'familybot' inside 'src/', this is correct.
package-dir = {"" = "src"}

[project.optional-dependencies]
dev = [
    "ruff~=0.12.5",
    "mypy",
    "pip-audit",
]
